add regatta-hd.jnlp (#61)
* add regatta-hd.jnlp

* all permissions

* use deploy phase for deployment

* include config

* new archive name

* create fat jar

* added download folder

* fixed sign

* pom.xml cleanup

* jnlp update

* added doctype

* switch to jdk 11

* mssql 11

* minor fixes

* jvms update

* fixed compile issue

* use jdk 11

* fixed workflow

* verify